public enum CellState {
    BLANK,
    MISS,
    HIT
}